--- a/text_agent/requirements.txt
+++ b/text_agent/requirements.txt
@@ -1,22 +1,36 @@
-# Core LangChain and LangGraph dependencies
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
 langchain-core==0.3.68
 langchain-ollama==0.3.3
 langgraph==0.5.1
 langgraph-checkpoint==2.1.0
 langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.73
 langsmith==0.4.4
-
-# Data handling and validation
-pydantic==2.11.7
-PyYAML==6.0.2
-python-dotenv==1.1.1
-
-# Type support
-typing_extensions==4.14.1
-
-# HTTP and communication
-httpx==0.28.1
-requests==2.32.3
-
-# Ollama client
+numpy==2.2.6
 ollama==0.5.1
+opencv-python==4.12.0.88
+orjson==3.11.0
+ormsgpack==1.10.0
+packaging==24.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.1
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+tenacity==9.1.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+xxhash==3.5.0
+zstandard==0.23.0
