not tested image analysis for threat level implementation

--- a/text_agent/config/prompts/templates.yaml
+++ b/text_agent/config/prompts/templates.yaml
@@ -1,3 +1,17 @@
+vision:
+  analyze_image_threat_json:
+    template: |
+      You are a security vision system. Analyze the provided image for dangerous objects.
+      Respond with a JSON object:
+      {
+        "threat_level": "low|medium|high",
+        "dangerous_object_detected": true|false,
+        "details": "..."
+      }
+      Only return valid JSON.
+    type: "string"
+    input_variables:
+      - "image_path"
 decision:
 
   make_decision_json:
