--- a/text_agent/Dockerfile
+++ b/text_agent/Dockerfile
@@ -8,6 +8,11 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     build-essential \
     libgl1 \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender1 \
+    ffmpeg \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
