--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:11434
+VITE_API_BASE_URL=http://localhost:8001
 
 # Development Settings
 VITE_REFRESH_INTERVAL=5000
@@ -10,4 +10,4 @@ VITE_MESSAGE_MAX_LENGTH=500
 VITE_DEBUG=false
 
 # Optional: App title
-VITE_APP_TITLE="AI Agent Dashboard"
+VITE_APP_TITLE="Security Gate Dashboard"
