--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8001
+VITE_API_BASE_URL=http://192.168.0.86:8001
 
 # Development Settings
 VITE_REFRESH_INTERVAL=5000
