--- a/dashboard/conf/nginx.conf
+++ b/dashboard/conf/nginx.conf
@@ -1,29 +1,65 @@
-# This is a basic Nginx configuration for serving a single-page application (SPA).
-# Save this file as 'conf/nginx.conf' in your project root.
+server {
+    listen 80;
+    server_name localhost;
+    return 301 https://$server_name$request_uri;
+}
 
 server {
-    # Listen on port 80 for HTTP connections
-    listen 80;
-    listen [::]:80;
-
-    # Set the root directory for serving static files
-    root /usr/share/nginx/html;
-
-    # Define the default index file
-    index index.html index.htm;
-
-    # Server name(s) - replace with your domain if needed
+    listen 443 ssl http2;
     server_name localhost;
 
-    # Location block for handling requests
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Reverse proxy for API routes
+    location /api/ {
+        proxy_pass http://127.0.0.1:8001/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        # Handle CORS if needed
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
+
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization" always;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
+    }
+
+    # Handle React Router (SPA routing)
     location / {
-        # Try to serve the requested file directly
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Error page configuration
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    # Cache static assets
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
+
+    # Security headers
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 }
