--- a/text_agent/requirements.txt
+++ b/text_agent/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bidict==0.23.1
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
@@ -16,19 +17,21 @@ langgraph==0.5.1
 langgraph-checkpoint==2.1.0
 langgraph-prebuilt==0.5.2
 langgraph-sdk==0.1.73
-langsmith==0.4.4
+langsmith==0.4.12
 numpy==2.2.6
-ollama==0.5.1
-opencv-python==4.12.0.88
+ollama==0.5.2
 orjson==3.11.0
 ormsgpack==1.10.0
 packaging==24.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
+python-engineio==4.12.2
+python-socketio==5.13.0
 PyYAML==6.0.2
 requests==2.32.3
 requests-toolbelt==1.0.0
+simple-websocket==1.1.0
 sniffio==1.3.1
 starlette==0.47.2
 tenacity==9.1.2
@@ -36,5 +39,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+wsproto==1.2.0
 xxhash==3.5.0
 zstandard==0.23.0
